--- a/4DSTEM Explorer/Base.lproj/Main.storyboard
+++ b/4DSTEM Explorer/Base.lproj/Main.storyboard
@@ -508,22 +508,19 @@
                                                                 <menuItem title="Paragraph" enabled="NO" id="ZvO-Gk-QUH">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                 </menuItem>
-                                                                <menuItem id="YGs-j5-SAR">
-                                                                    <string key="title">    Default</string>
+                                                                <menuItem title="    Default" id="YGs-j5-SAR">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                     <connections>
                                                                         <action selector="makeBaseWritingDirectionNatural:" target="Ady-hI-5gd" id="qtV-5e-UBP"/>
                                                                     </connections>
                                                                 </menuItem>
-                                                                <menuItem id="Lbh-J2-qVU">
-                                                                    <string key="title">    Left to Right</string>
+                                                                <menuItem title="    Left to Right" id="Lbh-J2-qVU">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                     <connections>
                                                                         <action selector="makeBaseWritingDirectionLeftToRight:" target="Ady-hI-5gd" id="S0X-9S-QSf"/>
                                                                     </connections>
                                                                 </menuItem>
-                                                                <menuItem id="jFq-tB-4Kx">
-                                                                    <string key="title">    Right to Left</string>
+                                                                <menuItem title="    Right to Left" id="jFq-tB-4Kx">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                     <connections>
                                                                         <action selector="makeBaseWritingDirectionRightToLeft:" target="Ady-hI-5gd" id="5fk-qB-AqJ"/>
@@ -533,22 +530,19 @@
                                                                 <menuItem title="Selection" enabled="NO" id="cqv-fj-IhA">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                 </menuItem>
-                                                                <menuItem id="Nop-cj-93Q">
-                                                                    <string key="title">    Default</string>
+                                                                <menuItem title="    Default" id="Nop-cj-93Q">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                     <connections>
                                                                         <action selector="makeTextWritingDirectionNatural:" target="Ady-hI-5gd" id="lPI-Se-ZHp"/>
                                                                     </connections>
                                                                 </menuItem>
-                                                                <menuItem id="BgM-ve-c93">
-                                                                    <string key="title">    Left to Right</string>
+                                                                <menuItem title="    Left to Right" id="BgM-ve-c93">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                     <connections>
                                                                         <action selector="makeTextWritingDirectionLeftToRight:" target="Ady-hI-5gd" id="caW-Bv-w94"/>
                                                                     </connections>
                                                                 </menuItem>
-                                                                <menuItem id="RB4-Sm-HuC">
-                                                                    <string key="title">    Right to Left</string>
+                                                                <menuItem title="    Right to Left" id="RB4-Sm-HuC">
                                                                     <modifierMask key="keyEquivalentModifierMask"/>
                                                                     <connections>
                                                                         <action selector="makeTextWritingDirectionRightToLeft:" target="Ady-hI-5gd" id="EXD-6r-ZUu"/>
@@ -809,22 +803,32 @@
                             <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" allowsMagnification="YES" usesPredominantAxisScrolling="NO" scrollerKnobStyle="dark" translatesAutoresizingMaskIntoConstraints="NO" id="LG6-QM-bRM">
                                 <rect key="frame" x="297" y="0.0" width="411" height="487"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <clipView key="contentView" ambiguous="YES" id="uLd-GI-Ws8">
+                                <clipView key="contentView" ambiguous="YES" id="uLd-GI-Ws8" customClass="CenteringClipView" customModule="_DSTEM_Explorer" customModuleProvider="target">
                                     <rect key="frame" x="1" y="1" width="409" height="485"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mpL-NG-57o">
+                                        <view ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mpL-NG-57o">
                                             <rect key="frame" x="0.0" y="0.0" width="394" height="470"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WRv-TO-IWj" customClass="ImageViewer" customModule="_DSTEM_Explorer" customModuleProvider="target">
-                                                    <rect key="frame" x="69" y="107" width="256" height="256"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="yMq-6h-O8J"/>
+                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WRv-TO-IWj" customClass="ImageViewer" customModule="_DSTEM_Explorer" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="470"/>
+                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="axesIndependently" id="yMq-6h-O8J"/>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="WRv-TO-IWj" firstAttribute="centerY" secondItem="mpL-NG-57o" secondAttribute="centerY" id="2Iu-Qi-Fre"/>
+                                                <constraint firstItem="WRv-TO-IWj" firstAttribute="height" secondItem="mpL-NG-57o" secondAttribute="height" id="PYf-7a-WOw"/>
+                                                <constraint firstAttribute="width" constant="394" id="bRz-Iy-oBT"/>
+                                                <constraint firstItem="WRv-TO-IWj" firstAttribute="centerX" secondItem="mpL-NG-57o" secondAttribute="centerX" id="geg-cv-PhY"/>
+                                                <constraint firstItem="WRv-TO-IWj" firstAttribute="width" secondItem="mpL-NG-57o" secondAttribute="width" id="l58-J2-tSP"/>
+                                                <constraint firstAttribute="height" constant="470" id="xog-Ze-6Y7"/>
+                                            </constraints>
                                         </view>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="mpL-NG-57o" firstAttribute="top" secondItem="uLd-GI-Ws8" secondAttribute="top" constant="15" id="BIx-eb-VNW"/>
+                                        <constraint firstItem="mpL-NG-57o" firstAttribute="leading" secondItem="uLd-GI-Ws8" secondAttribute="leading" id="ehR-t7-eUE"/>
+                                    </constraints>
                                     <color key="backgroundColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="YC2-gV-1f1">
@@ -839,8 +843,11 @@
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="clipView" destination="uLd-GI-Ws8" id="bEO-D7-WZz"/>
                         <outlet property="detectorTypeSegmented" destination="FvP-LK-bqC" id="xf6-kj-42q"/>
                         <outlet property="displayLogCheckbox" destination="osA-bR-xWW" id="NPc-Pv-oaD"/>
+                        <outlet property="docHeight" destination="xog-Ze-6Y7" id="Jtn-F7-jxE"/>
+                        <outlet property="docWidth" destination="bRz-Iy-oBT" id="dWi-xp-SAw"/>
                         <outlet property="imageView" destination="WRv-TO-IWj" id="1wl-m9-PHa"/>
                         <outlet property="innerAngleTextField" destination="aMy-NF-9gR" id="nUB-v4-Hnr"/>
                         <outlet property="isDisplayLog" destination="APx-ft-7EN" id="d48-hY-tvP"/>
@@ -848,6 +855,8 @@
                         <outlet property="lrup_xdSegmented" destination="ezS-aJ-Jxe" id="Smm-xb-t4T"/>
                         <outlet property="outerAngleTextField" destination="AN5-dg-408" id="3gI-ac-Vl0"/>
                         <outlet property="patternViewer" destination="oQa-mo-g57" id="ech-I8-bGF"/>
+                        <outlet property="viewHeightConstraint" destination="xog-Ze-6Y7" id="FYS-7c-0Tf"/>
+                        <outlet property="viewWidthConstraint" destination="bRz-Iy-oBT" id="1TS-nZ-31Y"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
